# AbsalomReconingConverter

./: .gitignore  .ruff.toml  LICENCE.md  LICENSE.md  __main__.py  arConverter.py  arDate.py  constants.py  pyproject.toml  readme.md  requirements.txt  run.py  todo.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: build-test.yml  docs.yml  release.yaml  release.yml  test-publish.yml
app/: arConverter.py  arDate.py  constants.py
app/src/: arConverter.py  arDate.py
arconverter/: __init__.py  __main__.py  arConverter.py  arDate.py  arconverter.py  ardate.py  constants.py
docs/: arconverter.html  search.js
docs/arconverter/: arconverter.html  ardate.html  constants.html
src/AbsalomReckoningConverter/: __main__.py  arconverter.py  ardate.py
src/arconverter/: arconverter.py
tests/: test_arConverter.py
