[tool.poetry]
name = "arconverter"
version = "0.1.2"
description = "Convert from the current or given Gregorian date to Absalom Reconing from Paizo's Pathfinder RPG"
authors = ["Evan Young <cantis@gmail.com>"]
maintainers = ["Evan Young <cantis@gmail.com>"]
license = "LICENCE.md"
readme = "README.md"
repository = "https://github.com/cantis/AbsalomReconingConverter"
keywords = ["python", "Pathfinder", "Absalom", "Golarion", "RPG", "Date"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
pytest = "*"
black = "^23.7.0"

[tool.poetry.scripts]
run = "run:main"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
max-line-length = 120

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-lenth = 120

[tool.ruff.flake8-quotes]
docstring-quotes = "single"

[tool.pytest.ini_options]
# -ra is for showing the output of the tests that failed
# -q is for quiet mode
addopts = "-ra -q"
# this adds the application to the path for the tests
pythonpath = [".", "arconverter"]
# this sets the testpaths to the tests directory
testpaths = ["tests"]