[tool.poetry]
name = "arconverter"
version = "0.1.2"
description = "Convert from the current or given Gregorian date to Absalom Reconing from Paizo's Pathfinder RPG"
authors = ["Evan Young <cantis@gmail.com>"]
maintainers = ["Evan Young <cantis@gmail.com>"]
license = "LICENCE.md"
readme = "README.md"
repository = "https://github.com/cantis/AbsalomReconingConverter"
keywords = ["python", "Pathfinder", "Absalom", "Golarion", "RPG", "Date"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
pytest = "*"
pdoc = "^15.0.1"
pytest-cov = "^6.0.0"

[tool.poetryd.scripts]
run = "run:main"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = [".", "arconverter"]
testpaths = ["tests"]